@@ -24,8 +24,8 @@
 
 struct SerdWorldImpl {
 	SerdNodes*      nodes;
-	SerdErrorSink   error_sink;
-	void*           error_handle;
+	SerdMessageFunc msg_func;
+	void*           msg_handle;
 	uint32_t        next_blank_id;
 	SerdNode*       blank_node;
 	const SerdNode* rdf_first;
@@ -39,9 +39,32 @@ struct SerdWorldImpl {
 
 FILE* serd_world_fopen(SerdWorld* world, const char* path, const char* mode);
 
-SerdStatus serd_world_error(const SerdWorld* world, const SerdError* e);
-
+/// Write a message to the log
+SERD_API
+SERD_LOG_FUNC(5, 0)
 SerdStatus
-serd_world_errorf(const SerdWorld* world, SerdStatus st, const char* fmt, ...);
+serd_world_vlogf_internal(const SerdWorld*  world,
+                          SerdStatus        st,
+                          SerdLogLevel      level,
+                          const SerdCursor* cursor,
+                          const char*       fmt,
+                          va_list           args);
+
+/// Write a message to the log
+SERD_API
+SERD_LOG_FUNC(5, 6)
+SerdStatus
+serd_world_logf_internal(const SerdWorld*  world,
+                         SerdStatus        st,
+                         SerdLogLevel      level,
+                         const SerdCursor* cursor,
+                         const char*       fmt,
+                         ...);
+
+#define SERD_LOG_ERRORF(world, st, fmt, ...) \
+	serd_world_logf_internal(world, st, SERD_LOG_LEVEL_ERR, NULL, fmt, __VA_ARGS__);
+
+#define SERD_LOG_ERROR(world, st, msg) \
+	serd_world_logf_internal(world, st, SERD_LOG_LEVEL_ERR, NULL, msg);
 
 #endif  // SERD_WORLD_H
